recursion.lessons.recursion.koch.Koch.scala.error
Koch:14: error: not found: value lenght
		avance(lenght/(3*levels));
                       ^Koch:16: error: not found: value level
		snowSide(level-1,length);
                         ^